# front-desk-nexus-ai

./: README.md  SUBMISSION.md  package.json
apps/client/: package.json
apps/client/src/app/: globals.css  layout.tsx  page.tsx
apps/client/src/components/: TalkingHead.tsx  VoiceActivityDetector.tsx
apps/client/src/contexts/: WebSocketContext.tsx
apps/server/: .env.example  README.md  main.py  package.json  pyproject.toml
